--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=Asistencia-
-spring.datasource.url=jdbc:mysql://localhost:3306/AsistenciaDB
+spring.datasource.url=jdbc:mysql://localhost:3306/asistenciadb
 spring.datasource.username=root
 spring.datasource.password=demma69247
 spring.datasource.driver-class.name=com.mysql.cj.jdbc.Driver
